Final working version of the calculator. Replaced Text objects with Label to prevent the display from stretching out the rest of the calculator. Fixed the arithmetic exception by limiting the precision of division operations to 10. Might consider 12

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -45,11 +45,11 @@
 .topDisplay
 {
 	-fx-font-size: 14px; 
-	-fx-fill: white;
+	-fx-text-fill: white;
 }
 
 .bottomDisplay
 {
 	-fx-font-size: 40px; 
-	-fx-fill: white;
+	-fx-text-fill: white;
 }
